--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <P>مصطفى السكنيدى</p>
 	<div id="game-container">
 		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
 	</div>
