--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <P>Amira omran</p>
+        <P>Aya Darwesh</p>
 	<div id="game-container">
 		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
 	</div>
