--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <div class="score"><P>Maher</p><P>top score = 74</p></div>
+        <div class="score"><P>Stitch</p><P>top score = 27</p></div>
 	<div id="game-container">
 		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
 	</div>
